@@ -1,28 +1,45 @@
 package com.cobank.service.iban;
 
-
+import com.cobank.repository.AccountRepository;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.Query;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-
-import java.security.SecureRandom;
-import java.util.stream.Collectors;
 
 @Service
 public class IbanService {
-    private static final String COUNTRY_CODE = "NL";
-    private static final String CHECK_DIGITS = "00";
-    private static final String BANK_CODE = "COOP";
-    private static final int ACCOUNT_NUMBER_LENGTH = 10;
-    private final SecureRandom random = new SecureRandom();
+    private final String countryCode;
+    private final String checkDigits;
+    private final String bankCode;
+    private final int accountNumberLength;
+
+    @PersistenceContext
+    private EntityManager entityManager;
+
+    public IbanService(
+            @Value("${iban.country-code}") String countryCode,
+            @Value("${iban.check-digits}") String checkDigits,
+            @Value("${iban.bank-code}") String bankCode,
+            @Value("${iban.account-number-length}") int accountNumberLength
+    ) {
+        this.countryCode = countryCode;
+        this.checkDigits = checkDigits;
+        this.bankCode = bankCode;
+        this.accountNumberLength = accountNumberLength;
+    }
 
     public String generateIban() {
-        String accountNumber = generateRandomNumericString();
-        return "%s%s%s%s".formatted(COUNTRY_CODE, CHECK_DIGITS, BANK_CODE, accountNumber);
+        long sequenceNumber = getNextAccountSequence();
+        String accountNumber = String.format("%0" + accountNumberLength + "d", sequenceNumber);
+
+        return "%s%s%s%s".formatted(countryCode, checkDigits, bankCode, accountNumber);
     }
 
-    private String generateRandomNumericString() {
-        return random.ints(ACCOUNT_NUMBER_LENGTH, 0, 10)
-                .mapToObj(String::valueOf)
-                .collect(Collectors.joining());
+    private long getNextAccountSequence() {
+        Query query = entityManager.createNativeQuery(
+                "SELECT NEXT VALUE FOR account_sequence"
+        );
+        return ((Number) query.getSingleResult()).longValue();
     }
 }
-
